[package]
name = "heks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25", features = ["event-stream"] }
tui = "0.19"
tokio = { version = "1.27.0", features = ["macros", "rt", "signal", "time"] }
futures = "0.3.28"
clap = { version = "4.2.4", features = ["derive"] }
memmap2 = "0.5.10"
log = "0.4.17"
env_logger = "0.10.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
home = "0.5.4"
shell-words = "1.1.0"
nix = "0.26.2"
pastel = "0.9.0"
itertools = "0.10.5"
